# FinSight

./: .env.example  README.md  alembic.ini  docker-compose.yml  project_structure.md  pyproject.toml
app/: celery_app.py  main.py
app/api/: router.py
app/core/: config.py
app/db/: session.py  transaction.py
app/enums/: document_status.py  document_type.py  llm_provider.py  review_reason.py  review_status.py  user_role.py  workflow_status.py
app/evals/: dataset_loader.py  evaluation_models.py  evaluation_report.py  evaluation_runner.py
app/llm/: llm_client.py  llm_factory.py  mock_llm_client.py  openai_client.py
app/policies/: citation_policy.yaml  financial_advice_policy.yaml  prompt_injection_policy.yaml
app/schemas/: chat.py  document.py  document_processing.py  evaluation.py  guardrails.py  indexing.py  reviews.py  tasks.py
app/utils/: file_utils.py
app/workflows/: document_indexing_workflow.py  document_processing_workflow.py  rag_query_workflow.py
docs/: architecture.md  async-processing.md  chunking-and-embeddings.md  database-design.md  document-processing.md  document-upload.md  evaluation-framework.md  guardrails-and-citation-validation.md  human-review-workflow.md  mvp-plan.md  problem-statement.md  product-scope.md  rag-qna.md  technical-decisions.md
scripts/: seed-db.py
tests/integration/: test_async_processing_flow.py  test_human_review_flow.py
tests/unit/: test_answer_metrics.py  test_checksum_service.py  test_citation_builder.py  test_citation_metrics.py  test_citation_validator.py  test_context_builder.py  test_file_utils.py  (+17 more)
(+95 files in other folders)
