[tool.poetry]
name = "finsight-ai-platform"
version = "0.1.0"
description = "Production-grade AI-native multi-agent financial document intelligence platform"
authors = ["Your Name"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"

sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"

redis = "^5.0.0"
celery = "^5.4.0"

boto3 = "^1.34.0"
qdrant-client = "^1.10.0"

openai = "^1.40.0"
anthropic = "^0.34.0"
langgraph = "^0.2.0"
langchain = "^0.2.0"

pypdf = "^4.3.0"
python-multipart = "^0.0.9"

opentelemetry-api = "^1.26.0"
opentelemetry-sdk = "^1.26.0"
prometheus-client = "^0.20.0"

structlog = "^24.4.0"
tiktoken = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.5.0"
mypy = "^1.11.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"